# esy-inverted-ctypes-stubs

./: .gitignore  README.md  README.org  dune-project  package.json
.ci/: esy-build-steps.yml
c/: dune  test.c
cpp/: hello.cc
esy.lock/: index.json
executable/: dune
js/: main.js
ocaml/: dune
ocaml/lib/: ApplyMyLibBindings.re  Gen.re  MyLibBindings.re  MyLibBindingsClone.re  dune
